--- a/service/life_quality_data-collector.service
+++ b/service/life_quality_data-collector.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=Humidity and Temperature collector
+Description=Life quality data collector
 After=network.target
 
 [Service]
 ExecStart=/usr/bin/python3 -u collector.py
-WorkingDirectory=/home/pi/pi_humidity
+WorkingDirectory=/home/pi/life_quality_data
 StandardOutput=inherit
 StandardError=inherit
 Restart=always
