--- a/service/life_quality_data-server.service
+++ b/service/life_quality_data-server.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=Humidity and Temperature server
+Description=Life quality data server
 After=network.target
 
 [Service]
 ExecStart=/usr/bin/python3 -u server.py
-WorkingDirectory=/home/pi/pi_humidity
+WorkingDirectory=/home/pi/life_quality_data
 StandardOutput=inherit
 StandardError=inherit
 Restart=always
