--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Adafruit_Python_DHT
-Adafruit_CCS811
+adafruit-circuitpython-ccs811
+adafruit-circuitpython-register
+adafruit-circuitpython-busdevice
 influxdb
 python-dotenv
