rollbacks to raspberry pi library for ccs811 and adds readings to collector

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 Adafruit_Python_DHT
-adafruit-circuitpython-ccs811
-adafruit-circuitpython-register
-adafruit-circuitpython-busdevice
+Adafruit_CCS811
 influxdb
 python-dotenv
