--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,5 @@ INFLUXDB_ADMIN_USER_PASSWORD=
 FLUXDB_COLLECTOR_USER_NAME=collector
 INFLUXDB_COLLECTOR_USER_PASSWORD=
 INFLUXDB_DASHBOARD_USER_PASSWORD=
+INFLUXDB_HOST=localhost
+INFLUXDB_PORT=8086
